--- a/src/components/ServiceCard.css
+++ b/src/components/ServiceCard.css
@@ -16,6 +16,7 @@
   -webkit-text-fill-color: transparent;
   text-align: center;
   width: 621px;
+  display: flex;
 }
 .card-heading,
 .paragraph {
@@ -76,6 +77,7 @@
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
+  display: flex;
 }
 .card1 {
   position: absolute;
@@ -182,7 +184,7 @@
 }
 .container-icon4 {
   height: 39.96%;
-  width: 94.46%;
+  width: 91;
   top: 4.98%;
   right: 2.92%;
   bottom: 55.06%;
@@ -216,4 +218,5 @@
   font-size: var(--h3-size);
   color: var(--color-teal);
   font-family: var(--body-default);
+  display: flex;
 }
